# amad3us

./: .gitignore  README.md  bff.yml  pyproject.toml  requirements.txt
chat_ingestion/: utils.py
ingestion/: README.md  format.py  tg.py  utils.py
llm/: llm.py  loaders.py  main.py  ollama.ipynb
notebooks/: faiss.ipynb  faiss_tg.ipynb  templates.ipynb
src/: bff.py  llms.py  loaders.py  main.py  preprocess.py  prompts.py  vectorstore.py
src/ingestion/: README.md  tg.py
src/tests/: test_tg.py
src/tests/test_logs/: sample_conversation.json
src/tests/test_logs_tg/: basic_receive_message.json  basic_response.json  one_hundred_messages.json
tests/: test_hello_world.py  test_tg.py  test_utils.py  tg_chatlog_generator.py
