[project]
name = "amad3us"
version = "1.1.1"

[tool.basedpyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/data"]
typeCheckingMode = "off"

reportMissingImports = "error"

pythonVersion = "3.12"
pythonPlatform = "Linux"
