[project]
name = "AMAD3US"
version = "1.1.2"

[tool.basedpyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
ignore = ["src/data"]
typeCheckingMode = "off"

reportMissingImports = "error"

pythonVersion = "3.13"
pythonPlatform = "Linux"
